--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.2
   google_fonts: ^3.0.1
   wave: ^0.2.0
   url_launcher: ^6.1.3
+  auto_animated: ^3.0.1
 
 dev_dependencies:
   flutter_test:
